# curve25519-cortex-m4

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: lib.rs  x25519.rs
