[package]
name = "curve25519-cortex-m4"
version = "0.1.0"
edition = "2021"
keywords = ["no-std", "cryptography", "signatures", "cortex-m"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.6.4", default-features = false }
zeroize = { version = "1.6.0", default-features = false, features = ["zeroize_derive"] }

[build-dependencies]
cc = "1"
